--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SlideShow</title>
+
+    <script src="/socket.io/socket.io.js"></script>
   </head>
 
   <body>
     <h1>Slide Show</h1>
+
+    <script>
+    const socket = io.connect('http://172.17.0.2:3000');
+    socket.on('image', function (data) {
+      console.log(data);
+    })
+    </script>
   </body>
 </html>
